app/static/css/site-sm.styl
@media (max-width: 992px)
  .market-place-item
    width: 48.8%
  #postman_message
  	#back
    	visibility visible;
  li.navavatar
    display: none

  .affix
    position: inherit

  #main-content-container
    margin-top: 0!important

  /* Reduce collapse point of nav bar */
  .navbar-header
    float: none

  .navbar-toggle
    display: block

  .navbar-collapse
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1)

  .navbar-collapse.collapse
    display: none!important

  .navbar-nav
    float: none!important;
    margin: 7.5px -15px

  .navbar-nav>li
    float: none

  .navbar-nav>li>a
    padding-top: 10px
    padding-bottom: 10px


/* catch iPad in landscape */
@media only screen and (max-device-width : 1024px)
  .affix
    position: inherit

  #main-content-container
    margin-top: 0!important

